force-app/main/default/objects/Account/fields/HCDM_Potential_Products__c.field-meta.xml
<CustomField>
    <fullName>HCDM_Potential_Products__c</fullName>
    <label>Potential Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>Biofuels</fullName>
            </value>
            <value>
                <fullName>CSO tickets</fullName>
            </value>
            <value>
                <fullName>Fuel Oil</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>MGO</fullName>
            </value>
            <value>
                <fullName>Mogas</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>