force-app/main/default/objects/Account/fields/hedging_volumes_MT__c.field-meta.xml
<CustomField>
    <fullName>hedging_volumes_MT__c</fullName>
    <label>Annual hedging volumes (MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>