force-app/main/default/objects/Account/fields/Hedging_vs_Physical_volume__c.field-meta.xml
<CustomField>
    <fullName>Hedging_vs_Physical_volume__c</fullName>
    <label>Hedging % vs Physical volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>