force-app/main/default/objects/Account/fields/Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms1__c</fullName>
    <description>Incoterms</description>
    <label>Incoterms1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>