force-app/main/default/objects/Account/fields/Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms2__c</fullName>
    <description>Incoterms</description>
    <label>Incoterms2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>