force-app/main/default/objects/Account/fields/London__c.field-meta.xml
<CustomField>
    <fullName>London__c</fullName>
    <description>Includes Europe, US, Canada &amp; Africa</description>
    <label>London</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>S AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>