force-app/main/default/objects/Account/fields/M2M_B2B__c.field-meta.xml
<CustomField>
    <fullName>M2M_B2B__c</fullName>
    <description>The B2B mark to market number</description>
    <inlineHelpText>If this figure is + then Shell is in the money (good). 
If negative then means if customer defaults then Shell will loss money.</inlineHelpText>
    <label>M2M for B2B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>