force-app/main/default/objects/Account/fields/M2M_Date__c.field-meta.xml
<CustomField>
    <fullName>M2M_Date__c</fullName>
    <inlineHelpText>This is entered by the back office when updating the M2M numbers</inlineHelpText>
    <label>M2M Date</label>
    <type>Date</type>
</CustomField>