force-app/main/default/objects/Account/fields/M2M_for_CO2__c.field-meta.xml
<CustomField>
    <fullName>M2M_for_CO2__c</fullName>
    <description>Current M2M for open CO2 deals.</description>
    <inlineHelpText>Current M2M for open CO2 deals.</inlineHelpText>
    <label>M2M for CO2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>