force-app/main/default/objects/Account/fields/Mandated_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Scheme__c</fullName>
    <description>CO2 Emissions Trading scheme that the entity is mandated by.</description>
    <inlineHelpText>CO2 Emissions Trading scheme that the entity is mandated by.</inlineHelpText>
    <label>Mandated Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian CPRS</fullName>
                <default>true</default>
                <label>Australian CPRS</label>
            </value>
            <value>
                <fullName>EU ETS</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Projects - CDM/JI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>