force-app/main/default/objects/Account/fields/Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement__c</fullName>
    <label>Master Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In negotiation</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Not signed</fullName>
                <default>true</default>
                <label>Not signed</label>
            </value>
            <value>
                <fullName>Signed (see notes)</fullName>
            </value>
            <value>
                <fullName>Signed and attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>