force-app/main/default/objects/Account/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <description>Mode of Transport</description>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Rail</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Road Tank Truck</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Bulk tanker</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>Road IM Portable Tnk</label>
            </value>
            <value>
                <fullName>1J</fullName>
                <label>Bulk Cont. road/sea</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Rail Tank Car</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Road (Bulk)  / Rail</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>Road(Bulk)/Short Sea</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Inland water-transpt</label>
            </value>
            <value>
                <fullName>3A</fullName>
                <label>Road(Pack)/Short Sea</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Air-transport</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Pipeline-transport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>