force-app/main/default/objects/Account/fields/Non_Standard_settlement_terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_settlement_terms__c</fullName>
    <label>Non-standard settlement terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>