force-app/main/default/objects/Account/fields/Notes_CO2_B2B__c.field-meta.xml
<CustomField>
    <fullName>Notes_CO2_B2B__c</fullName>
    <label>Notes : CO2-B2B</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>