force-app/main/default/objects/Account/fields/OLE_Code__c.field-meta.xml
<CustomField>
    <fullName>OLE_Code__c</fullName>
    <description>Customer code in Openlink</description>
    <label>OLE Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>