force-app/main/default/objects/Account/fields/OLF_First_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>OLF_First_Activation_Date__c</fullName>
    <label>OLF First Activation Date</label>
    <type>DateTime</type>
</CustomField>