force-app/main/default/objects/Account/fields/Order_Block__c.field-meta.xml
<CustomField>
    <fullName>Order_Block__c</fullName>
    <description>Order Block</description>
    <label>Order Block</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Overall block</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>All free of charge</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Test block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>