force-app/main/default/objects/Account/fields/P31_reference__c.field-meta.xml
<CustomField>
    <fullName>P31_reference__c</fullName>
    <inlineHelpText>What is the DEX P31 reference that is cleared for them to trade with?</inlineHelpText>
    <label>DEX reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>