force-app/main/default/objects/Account/fields/PAN_European__c.field-meta.xml
<CustomField>
    <fullName>PAN_European__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN European</label>
    <type>Checkbox</type>
</CustomField>