force-app/main/default/objects/Account/fields/Paper_deals_done_2015__c.field-meta.xml
<CustomField>
    <fullName>Paper_deals_done_2015__c</fullName>
    <label>Paper deals done 2015</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>