force-app/main/default/objects/Account/fields/Parent_Account_Total_Existing_PFE__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Total_Existing_PFE__c</fullName>
    <inlineHelpText>This field sums up the Existing PFE of ALL the child accounts related to this Parent account. This number is manually entered.</inlineHelpText>
    <label>Parent Account - Total Existing PFE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>