force-app/main/default/objects/Account/fields/Partner_Counter__c.field-meta.xml
<CustomField>
    <fullName>Partner_Counter__c</fullName>
    <label>Partner Counter</label>
    <length>3</length>
    <type>Text</type>
</CustomField>