force-app/main/default/objects/Account/fields/Partner_Function__c.field-meta.xml
<CustomField>
    <fullName>Partner_Function__c</fullName>
    <label>Partner Function</label>
    <length>2</length>
    <type>Text</type>
</CustomField>