force-app/main/default/objects/Account/fields/PFE_Approved_by_Credit__c.field-meta.xml
<CustomField>
    <fullName>PFE_Approved_by_Credit__c</fullName>
    <formula>Contingent_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This isan copied cell and is taken from the CCL field</inlineHelpText>
    <label>PFE Approved by Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>