force-app/main/default/objects/Account/fields/PFE_approved_by_credit_Traded_Hub__c.field-meta.xml
<CustomField>
    <fullName>PFE_approved_by_credit_Traded_Hub__c</fullName>
    <formula>Contingent_Credit_Limit_Traded_Hub__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFE approved by credit - Traded Hub</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>