force-app/main/default/objects/Account/fields/PFE_REmaining__c.field-meta.xml
<CustomField>
    <fullName>PFE_REmaining__c</fullName>
    <formula>IF( CONTAINS(Name ,&quot;Parent Account&quot;)=TRUE,Contingent_Credit__c  - Parent_Account_Total_Existing_PFE__c,Contingent_Credit__c  -  Exisiting_PFE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the PFE that is still avaliable for this customer.</inlineHelpText>
    <label>PFE Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>