force-app/main/default/objects/Account/fields/PFE_remaining_Traded_Hub__c.field-meta.xml
<CustomField>
    <fullName>PFE_remaining_Traded_Hub__c</fullName>
    <formula>Contingent_Credit_Limit_Traded_Hub__c  - 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFE remaining - Traded Hub</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>