force-app/main/default/objects/Account/fields/Potential_CO2_Structured_Margin__c.field-meta.xml
<CustomField>
    <fullName>Potential_CO2_Structured_Margin__c</fullName>
    <description>Potential Phase II Structured Deal Margin.</description>
    <formula>ABS( EU_ETS__c * 0.64 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Potential Phase II Structured Deal Margin.</inlineHelpText>
    <label>Potential Phase II Structured Margin €</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>