force-app/main/default/objects/Account/fields/Potential_CO2_Vanilla_Margin__c.field-meta.xml
<CustomField>
    <fullName>Potential_CO2_Vanilla_Margin__c</fullName>
    <description>Potential CO2 Vanilla Margin based on Company Level Size Classification (per annum).</description>
    <formula>ABS(IF( Company_Level_Size_Ranking__c = 1,0.02* EU_ETS_Net_Position_2008__c,IF(Company_Level_Size_Ranking__c = 2,0.05*EU_ETS_Net_Position_2008__c,IF(Company_Level_Size_Ranking__c = 3,0.10* EU_ETS_Net_Position_2008__c,IF(Company_Level_Size_Ranking__c = 4,0.2* EU_ETS_Net_Position_2008__c,0))))+  Aviation_Expected_2012_Net_Position_EU__c  *0.10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Potential CO2 Vanilla Margin based on Company Level Size Classification (per annum).</inlineHelpText>
    <label>Potential CO2 Vanilla Margin €</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>