force-app/main/default/objects/Account/fields/Potential_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Potential_Contribution__c</fullName>
    <formula>Target_volume__c * Expected_Margin_MT__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation: How much $ do you think we can make from the customer per annum via  risk marketing fixed deals</inlineHelpText>
    <label>Potential Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>