force-app/main/default/objects/Account/fields/Potential_Monthly_Hedge_Vol_kT__c.field-meta.xml
<CustomField>
    <fullName>Potential_Monthly_Hedge_Vol_kT__c</fullName>
    <label>Potential Monthly Hedge Vol (kT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>