force-app/main/default/objects/Account/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <inlineHelpText>Enter in % - how much business do you think we will win of Total RM volume.  This figure is used in calculating the Contribution ie Total RM volume * Probability * Expected Margin</inlineHelpText>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>