force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Customer trades</description>
    <inlineHelpText>What does this customer trade?</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA - Gasoil 0.5 SGP Cargo</fullName>
            </value>
            <value>
                <fullName>AA - High Sulpher FO 180 SGP Cargo</fullName>
            </value>
            <value>
                <fullName>AA - High Sulpher FO 380 SGP Cargo</fullName>
            </value>
            <value>
                <fullName>AA - Jet Kero SGP Cargo</fullName>
            </value>
            <value>
                <fullName>Butane</fullName>
            </value>
            <value>
                <fullName>CR - Dubai</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 1.0 CIF Genoa Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 1.0 CIF NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 1.0 FOB NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 1.0 FOB Rotterdam Barge</fullName>
            </value>
            <value>
                <fullName>EU- Fuel 3.5 CIF Genoa</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 3.5 FOB MED Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Fuel 3.5 FOB Rotterdam Barge</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil 0.2 CIF MED Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil 0.2 CIF NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil 0.2 FOB MED Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil 0.2 FOB NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil 0.2 FOB Rotterdam Barge</fullName>
            </value>
            <value>
                <fullName>EU - Gasoil EN590 CIF NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Jet Kero CIF NWE Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Jet Kero FOB MED Cargo</fullName>
            </value>
            <value>
                <fullName>EU - Naphta CIF NWE Physical</fullName>
            </value>
            <value>
                <fullName>EU - ULSD 10ppm Fob Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>IPE - Brent</fullName>
            </value>
            <value>
                <fullName>IPE - Gasoil</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>ARGUS EURO BOB OXY vs PLATTS NPH CC NWE</fullName>
            </value>
            <value>
                <fullName>380 CST SINGAPORE FUEL OIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>