force-app/main/default/objects/Account/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <inlineHelpText>Pick list</inlineHelpText>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
                <default>true</default>
                <label>Suspect</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Approched</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>