force-app/main/default/objects/Account/fields/RE_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>RE_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>2 AND (1 OR 3)</booleanFilter>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>contains</operation>
            <value>AM</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PH Code Value Mapping</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>Accounts (Account Manager)</relationshipLabel>
    <relationshipName>RE_Account_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>