force-app/main/default/objects/Account/fields/RE_Address__c.field-meta.xml
<CustomField>
    <fullName>RE_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>