force-app/main/default/objects/Account/fields/RE_AMlineOfBsns__c.field-meta.xml
<CustomField>
    <fullName>RE_AMlineOfBsns__c</fullName>
    <label>AMlineOfBsns</label>
    <type>TextArea</type>
</CustomField>