force-app/main/default/objects/Account/fields/RE_Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>RE_Auto_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>