force-app/main/default/objects/Account/fields/RE_Auto_Approved_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Auto_Approved_Value__c</fullName>
    <label>Auto Approved Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>