force-app/main/default/objects/Account/fields/RE_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Group (for Pricing Purpose)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Customer Group</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>Accounts (Customer Group)</relationshipLabel>
    <relationshipName>RE_Customer_Group</relationshipName>
    <type>Lookup</type>
</CustomField>