force-app/main/default/objects/Account/fields/RE_Operator__c.field-meta.xml
<CustomField>
    <fullName>RE_Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Lesser than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>