force-app/main/default/objects/Account/fields/RE_Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>RE_Parent_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Account.Customer_Type__c</field>
            <operation>equals</operation>
            <value>Sold To</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Revolution MY</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Revolution PH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>