force-app/main/default/objects/Account/fields/RE_ResellerType__c.field-meta.xml
<CustomField>
    <fullName>RE_ResellerType__c</fullName>
    <label>ResellerType</label>
    <type>TextArea</type>
</CustomField>