force-app/main/default/objects/Account/fields/RE_Sales__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>Accounts (Sales)</relationshipLabel>
    <relationshipName>RE_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>