force-app/main/default/objects/Account/fields/RE_Tier__c.field-meta.xml
<CustomField>
    <fullName>RE_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Tier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>Accounts (Tier)</relationshipLabel>
    <relationshipName>RE_Tier</relationshipName>
    <type>Lookup</type>
</CustomField>